Ajout d'un fichier de config, utile pour les id récurrents

--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-    "role_message_id":"1473461649498439711",
-    "role_channel_id":"972935312156291202"
+    "role_message_id": 1473469546999316494,
+    "role_channel_id": "972935312156291202"
 }
