--- a/config.json
+++ b/config.json
@@ -1,4 +1,7 @@
 {
-    "role_message_id": 1473469546999316494,
-    "role_channel_id": "972935312156291202"
+    "role_message_id": 1473480782491156591,
+    "role_channel_id": 972935312156291202,
+    "emoji_role_id": 966507969091084308,
+    "id_role1": 861656194816147476,
+    "id_role2": 861267749539545100
 }
