--- a/config.json
+++ b/config.json
@@ -1,4 +1,5 @@
 {
+    "channel_log_id": 1051971103217684572,
     "role_message_id": 1473480782491156591,
     "role_channel_id": 972935312156291202,
     "emoji_role_id": 966507969091084308,
