Ajout de l'id du channel général

--- a/config.json
+++ b/config.json
@@ -1,6 +1,7 @@
 {
     "channel_log_id": 1051971103217684572,
-    "role_message_id": 1473480782491156591,
+    "channel_welcome_id": 792013504969310258,
+    "role_message_id": 1473748455946977391,
     "role_channel_id": 972935312156291202,
     "emoji_role_id": 966507969091084308,
     "id_role1": 861656194816147476,
