Ajout d'une task permettant de changer de status automatiquement + status dans le json

--- a/config.json
+++ b/config.json
@@ -5,5 +5,11 @@
     "role_channel_id": 972935312156291202,
     "emoji_role_id": 966507969091084308,
     "id_role1": 861656194816147476,
-    "id_role2": 861267749539545100
+    "id_role2": 861267749539545100,
+    "status": {
+        "1":"I'm on your side, no matter what happens",
+        "2":"En pleine répétition",
+        "3":"Just chillin'",
+        "4":"Eating some apples"
+    }
 }
